log
 tests:  0|5
total_score: 0/70
a86f043
 tests:  2|4
total_score: 15/70
a86f043
Fri 05 May 2023 06:18:37 PM UTC: 
 tests:  2|4
total_score: 15/70
3ebb82a
Fri 05 May 2023 06:19:47 PM UTC: 
 sudoku.c | 51 ++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 44 insertions(+), 7 deletions(-)
 tests:  2|4
total_score: 15/70
fcb4cb1
Fri 05 May 2023 06:20:11 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
a6c3c85
Fri 05 May 2023 06:42:06 PM UTC: 
 sudoku.c | 64 +++++++++++++++++++++++++---------------------------------------
 1 file changed, 25 insertions(+), 39 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4f4746
Fri 05 May 2023 06:56:16 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
1e5bce9
Fri 05 May 2023 06:59:22 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
c49883c
Fri 05 May 2023 07:04:16 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:74:20: error: expected expression before ‘{’ token
   74 |     submatriz[9] = {0};
      |                    ^
Compilation failed
9ad3ac8
Fri 05 May 2023 07:07:39 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:74:5: error: ‘submatriz’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   74 |     free(submatriz);
      |     ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
866015e
Fri 05 May 2023 07:08:28 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
1a561ad
Sat 06 May 2023 04:46:02 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
4cb8d89
Sat 06 May 2023 04:53:11 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b125517
